# evidgap-rs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Plans.md  README.md  TODO.md  deny.toml  rust-toolchain.toml  rustfmt.toml
apps/evidgap-cli/: Cargo.toml
apps/placeholder/: Cargo.toml
apps/placeholder/src/: lib.rs
crates/evidgap-adapter-chembl/: Cargo.toml  README.md
crates/evidgap-adapter-chembl/src/: lib.rs
crates/evidgap-adapter-clinicaltrials/: Cargo.toml  README.md
crates/evidgap-adapter-clinicaltrials/src/: lib.rs
crates/evidgap-adapter-pubmed/: Cargo.toml  README.md
crates/evidgap-adapter-pubmed/src/: lib.rs
crates/evidgap-graph/: Cargo.toml  README.md
crates/evidgap-graph/src/: lib.rs
crates/evidgap-id/: CHANGELOG.md  Cargo.toml  README.md
crates/evidgap-id/src/: lib.rs
crates/evidgap-orchestrator/: Cargo.toml  README.md
crates/evidgap-orchestrator/src/: lib.rs
crates/evidgap-ports/: Cargo.toml  README.md
crates/evidgap-ports/src/: fixtures.rs  lib.rs
crates/evidgap-prov/: Cargo.toml  README.md
crates/evidgap-prov/src/: lib.rs
crates/placeholder/: Cargo.toml
crates/placeholder/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: check_audit.rs  check_cardinality.rs  check_coverage.rs  check_msrv.rs  check_ports.rs  check_provenance.rs  check_release.rs  main.rs
