[package]
name = "evidgap-ports"
version = "0.0.0"
edition = "2024"

[features]
default = []
fixtures = []

[dependencies]
async-trait = "*"
evidgap-id = { path = "../../crates/evidgap-id" }
evidgap-prov = { path = "../../crates/evidgap-prov" }
evidgap-graph = { path = "../../crates/evidgap-graph" }
